--- a/src/app/house-cards-menu/house-cards-menu.component.html
+++ b/src/app/house-cards-menu/house-cards-menu.component.html
@@ -1,14 +1,14 @@
-<mat-grid-list cols="4" rowHeight="600" gutterSize="5">
-  <mat-grid-tile>
-    <app-house-card [logoImage]="logoImages[0]"></app-house-card>
+<mat-grid-list cols="4" rowHeight="400" gutterSize="5">
+  <mat-grid-tile (click)="openBottomSheet()">
+    <app-house-card [logoImage]="logoImages[0]" [name]="houseNames[0]"></app-house-card>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-house-card [logoImage]="logoImages[1]"></app-house-card>
+    <app-house-card [logoImage]="logoImages[1]" [name]="houseNames[1]"></app-house-card>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-house-card [logoImage]="logoImages[2]"></app-house-card>
+    <app-house-card [logoImage]="logoImages[2]" [name]="houseNames[2]"></app-house-card>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-house-card [logoImage]="logoImages[3]"></app-house-card>
+    <app-house-card [logoImage]="logoImages[3]" [name]="houseNames[3]"></app-house-card>
   </mat-grid-tile>
 </mat-grid-list>
