--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-nav-menu></app-nav-menu>
 <app-house-cards-menu></app-house-cards-menu>
-<router-outlet></router-outlet>
+<app-sports-list></app-sports-list>
