--- a/src/app/house-card/house-card.component.html
+++ b/src/app/house-card/house-card.component.html
@@ -1,5 +1,5 @@
 <div class="house-image-container" (click)="showScores()" *ngIf="hide">
-  <img mat-card-image [src]="logoImage" [alt]="logoImage" class="house-image">
+  <img [src]="logoImage" [alt]="logoImage" class="house-image">
 </div>
 <div class="house-image-container" (click)="showScores()" *ngIf="!hide">
   <div>
