--- a/src/app/house-cards-menu/house-cards-menu.component.html
+++ b/src/app/house-cards-menu/house-cards-menu.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list cols="4" rowHeight="400" gutterSize="5">
-  <mat-grid-tile (click)="openBottomSheet()">
+<mat-grid-list cols="4" rowHeight="350" gutterSize="5">
+  <mat-grid-tile>
     <app-house-card [logoImage]="logoImages[0]" [name]="houseNames[0]"></app-house-card>
   </mat-grid-tile>
   <mat-grid-tile>
