--- a/src/app/sport/sport.component.html
+++ b/src/app/sport/sport.component.html
@@ -1,1 +1,1 @@
-<img mat-card-image src="../../assets/image/pool.png" class="house-image">
+<img mat-card-image [src]="iconImage" class="sport-image" (click)="goTo(sportName)">
