--- a/src/app/detail-table/detail-table.component.html
+++ b/src/app/detail-table/detail-table.component.html
@@ -1,1 +1,28 @@
-<p>detail-table works!</p>
+<table mat-table [dataSource]="sportData" >
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+  <!-- Name Column -->
+  <ng-container matColumnDef="matchName">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.matchName}} </td>
+  </ng-container>
+
+  <!--&lt;!&ndash; Weight Column &ndash;&gt;-->
+  <!--<ng-container matColumnDef="weight">-->
+    <!--<th mat-header-cell *matHeaderCellDef> Weight </th>-->
+    <!--<td mat-cell *matCellDef="let element"> {{element.weight}} </td>-->
+  <!--</ng-container>-->
+
+  <!--&lt;!&ndash; Symbol Column &ndash;&gt;-->
+  <!--<ng-container matColumnDef="symbol">-->
+    <!--<th mat-header-cell *matHeaderCellDef> Symbol </th>-->
+    <!--<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>-->
+  <!--</ng-container>-->
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<div>
+
+</div>
