--- a/src/app/detail-table/detail-table.component.html
+++ b/src/app/detail-table/detail-table.component.html
@@ -40,7 +40,7 @@
 
   <ng-container matColumnDef="viewBoard">
     <th mat-header-cell *matHeaderCellDef> View Flow </th>
-    <td mat-cell *matCellDef="let element"> {{element.viewBoard}} </td>
+    <td mat-cell *matCellDef="let element"> <app-i-frame [iFrameLink]="element.viewBoard" [matchName]="element.matchName"></app-i-frame></td>
   </ng-container>
 
   <!--&lt;!&ndash; Weight Column &ndash;&gt;-->
