--- a/src/app/i-frame/i-frame.component.css
+++ b/src/app/i-frame/i-frame.component.css
@@ -8,8 +8,7 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0); /* Fallback color */ /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -19,6 +18,7 @@
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  height: 95%;
 }
 
 /* The Close Button */
@@ -34,4 +34,19 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.i-frame-container{
+  height: 100%;
+  width: 100%;
+}
+
+.i-frame{
+  height: 95%;
+  width: 100%;
+}
+
+.header{
+  font-size: 14pt;
+  font-weight: bold;
 }
