--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,2 @@
-<app-nav-menu></app-nav-menu>
 <app-house-cards-menu></app-house-cards-menu>
-<app-sports-list></app-sports-list>
+<app-sports-list (clickedSport)="outputToParent($event)"></app-sports-list>
