--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,7 @@
 <mat-grid-list cols="3" rowHeight="100">
   <mat-grid-tile></mat-grid-tile>
-  <mat-grid-tile>
-    <a [href]="'/'">
+  <mat-grid-tile (click)="showHomeView()">
       <img src="../../assets/image/main-logo.png" class="logo-image">
-    </a>
   </mat-grid-tile>
   <mat-grid-tile></mat-grid-tile>
 </mat-grid-list>
