--- a/src/app/sports-list/sports-list.component.html
+++ b/src/app/sports-list/sports-list.component.html
@@ -1,20 +1,20 @@
 <mat-grid-list cols="6" rowHeight="200" gutterSize="5">
   <mat-grid-tile>
-    <app-sport [iconImage]="iconImages[0]" [sportName]="sportList[0]"></app-sport>
+    <app-sport [iconImage]="iconImages[0]" [sportName]="sportList[0]" (clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-sport [iconImage]="iconImages[1]" [sportName]="sportList[1]"></app-sport>
+    <app-sport [iconImage]="iconImages[1]" [sportName]="sportList[1]" (clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-sport [iconImage]="iconImages[2]" [sportName]="sportList[2]"></app-sport>
+    <app-sport [iconImage]="iconImages[2]" [sportName]="sportList[2]" (clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-sport [iconImage]="iconImages[3]" [sportName]="sportList[3]"></app-sport>
+    <app-sport [iconImage]="iconImages[3]" [sportName]="sportList[3]" (clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-sport [iconImage]="iconImages[4]" [sportName]="sportList[4]"></app-sport>
+    <app-sport [iconImage]="iconImages[4]" [sportName]="sportList[4]"(clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-sport [iconImage]="iconImages[5]" [sportName]="sportList[5]"></app-sport>
+    <app-sport [iconImage]="iconImages[5]" [sportName]="sportList[5]" (clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
 </mat-grid-list>
