--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -1,4 +1,4 @@
-<button mat-button color="warn" [id]="matchName+'id'" (click)="showModal(matchName+'modal')">Open Board</button>
+<button mat-button class="btn-sport" [id]="matchName+'id'" (click)="showModal(matchName+'modal')">{{matchName}}</button>
 
 <div [id]="matchName+'modal'" class="modal">
 
