--- a/src/app/sports-list/sports-list.component.html
+++ b/src/app/sports-list/sports-list.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="6" rowHeight="200" gutterSize="5">
+<mat-grid-list cols="6" rowHeight="200" gutterSize="5" class="list-sport">
   <mat-grid-tile>
     <app-sport [iconImage]="iconImages[0]" [sportName]="sportList[0]" (clickedSport)="outputToParent($event)"></app-sport>
   </mat-grid-tile>
