--- a/src/app/detail-table/detail-table.component.html
+++ b/src/app/detail-table/detail-table.component.html
@@ -1,9 +1,9 @@
-<table mat-table [dataSource]="sportData" >
+<!-- <table mat-table [dataSource]="sportData" > -->
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
   <!-- Name Column -->
-  <ng-container matColumnDef="matchName">
+  <!-- <ng-container matColumnDef="matchName">
     <th mat-header-cell *matHeaderCellDef> Match Name </th>
     <td mat-cell *matCellDef="let element"> {{element.matchName}} </td>
   </ng-container>
@@ -41,7 +41,7 @@
   <ng-container matColumnDef="viewBoard">
     <th mat-header-cell *matHeaderCellDef> View Flow </th>
     <td mat-cell *matCellDef="let element"> <app-i-frame [iFrameLink]="element.viewBoard" [matchName]="element.matchName"></app-i-frame></td>
-  </ng-container>
+  </ng-container> -->
 
   <!--&lt;!&ndash; Weight Column &ndash;&gt;-->
   <!--<ng-container matColumnDef="weight">-->
@@ -55,9 +55,11 @@
     <!--<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>-->
   <!--</ng-container>-->
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<div>
-
+</table> -->
+<div class="Games"  style="text-align:center;">
+<ng-template ngFor let-item [ngForOf]="sportData" let-i="index">
+  <app-i-frame [iFrameLink]="item.viewBoard" [matchName]="item.matchName"></app-i-frame><br>
+</ng-template>
 </div>
