--- a/src/app/i-frame/i-frame.component.css
+++ b/src/app/i-frame/i-frame.component.css
@@ -50,3 +50,14 @@
   font-size: 14pt;
   font-weight: bold;
 }
+
+.btn-sport{
+  font-size: 2.5em;
+  color: #111;
+  height: 20%;
+  width: 200px;
+  background: rgba(255, 255, 255);
+  margin-top: 2%;
+  margin-left: 10px;
+
+}
